# platform-graph

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
docs/adr/: 0001-separate-config-key-for-raw-manifests.md
docs/issues/: 0001-index-raw-manifest-folders.md
graphsearch/: __init__.py  cli.py  db.py
graphsearch/k8s/: __init__.py
graphsearch/terraform/: __init__.py  index.py
platform_graph/: __init__.py  cli.py  config.py  db.py  model.py  queries.py
platform_graph/k8s/: index.py  manifests.py  network.py  parse.py  rbac.py  render.py  topology.py
platform_graph/terraform/: index.py  parse.py
src/: cli.py  config.py  model.py  queries.py
src/k8s/: index.py  manifests.py  network.py  parse.py  rbac.py  render.py  topology.py
src/terraform/: parse.py
tests/: test_k8s_manifests.py  test_k8s_network.py  test_k8s_parse.py  test_k8s_rbac.py  test_k8s_render.py  test_k8s_topology.py
tests/terraform/: test_parse.py
