[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphsearch"
version = "0.1.0"
description = "CLI tool that indexes and queries codebase relationships in Memgraph"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "tony", email = "tran.d@oolio.com" },
]
keywords = ["graphsearch", "memgraph", "graph", "codebase", "relationships"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "neo4j>=5",
    "pyyaml>=6",
    "python-hcl2>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
graphsearch = "graphsearch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["graphsearch"]

[tool.hatch.build.targets.sdist]
include = ["graphsearch"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["graphsearch"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
